manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: movie-platform
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 4000
      targetPort: 4000
